Archive2/e9/ee90cbbd1befa9/output
main.cpp:6:38: warning: qualifier on function type 'F' (aka 'void ()') has unspecified behavior
    static_assert( std::is_same<F, F const>(), "" );
                                   ~~^~~~~
main.cpp:6:5: error: static_assert failed ""
    static_assert( std::is_same<F, F const>(), "" );
    ^              ~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:7:39: warning: qualifier on function type 'F' (aka 'void ()') has unspecified behavior
    static_assert( std::is_same<F&, F const&>(), "" );
                                    ~~^~~~~
main.cpp:7:5: error: static_assert failed ""
    static_assert( std::is_same<F&, F const&>(), "" );
    ^              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2 warnings and 2 errors generated.
