Archive2/e9/ee90cbbd1befa9/main.cpp
#include <type_traits>

int main()
{
    using F = void();
    static_assert( std::is_same<F, F const>(), "" );
    static_assert( std::is_same<F&, F const&>(), "" );
}